Adapt testing to duplicate UID exception. Test object modification for the cached driver.

--- a/package.xml
+++ b/package.xml
@@ -35,6 +35,7 @@
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
  <notes>
+* [gwr] Deal with Kolab_Format parsing exceptions.
 * [gwr] Throw an exception on a duplicate UID within one folder.
 * First release candidate for Horde 4.
  </notes>
@@ -952,6 +953,7 @@
    <date>2011-03-21</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
+* [gwr] Deal with Kolab_Format parsing exceptions.
 * [gwr] Throw an exception on a duplicate UID within one folder.
 * First release candidate for Horde 4.
    </notes>
