--- a/package.xml
+++ b/package.xml
@@ -11,8 +11,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-05-30</date>
- <time>21:31:36</time>
+ <date>2011-05-31</date>
+ <time>04:35:51</time>
  <version>
   <release>1.1.0</release>
   <api>1.1.0</api>
@@ -23,6 +23,7 @@
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
  <notes>
+* [gwr] Added a handler for active sync settings.
 * [gwr] Added preference data query.
 * [gwr] Added support for storing data query results in the cache.
 * [gwr] Added support for deleting messages by backend UID.
@@ -141,6 +142,10 @@
           <file name="Base.php" role="php" />
           <file name="Cache.php" role="php" />
          </dir> <!-- /lib/Horde/Kolab/Storage/List/Query/Acl -->
+         <dir name="ActiveSync">
+          <file name="Base.php" role="php" />
+          <file name="Cache.php" role="php" />
+         </dir> <!-- /lib/Horde/Kolab/Storage/List/Query/ActiveSync -->
          <dir name="List">
           <file name="Base.php" role="php" />
           <file name="Cache.php" role="php" />
@@ -150,6 +155,7 @@
           <file name="Cache.php" role="php" />
          </dir> <!-- /lib/Horde/Kolab/Storage/List/Query/Share -->
          <file name="Acl.php" role="php" />
+         <file name="ActiveSync.php" role="php" />
          <file name="List.php" role="php" />
          <file name="Share.php" role="php" />
         </dir> <!-- /lib/Horde/Kolab/Storage/List/Query -->
@@ -520,6 +526,10 @@
            <file name="BaseTest.php" role="test" />
            <file name="CacheTest.php" role="test" />
           </dir> <!-- /test/Horde/Kolab/Storage/Unit/List/Query/Acl -->
+          <dir name="ActiveSync">
+           <file name="BaseTest.php" role="test" />
+           <file name="CacheTest.php" role="test" />
+          </dir> <!-- /test/Horde/Kolab/Storage/Unit/List/Query/ActiveSync -->
           <dir name="List">
            <file name="BaseTest.php" role="test" />
            <file name="CacheTest.php" role="test" />
@@ -703,10 +713,13 @@
    <install as="Horde/Kolab/Storage/List/Decorator/Cache.php" name="lib/Horde/Kolab/Storage/List/Decorator/Cache.php" />
    <install as="Horde/Kolab/Storage/List/Decorator/Log.php" name="lib/Horde/Kolab/Storage/List/Decorator/Log.php" />
    <install as="Horde/Kolab/Storage/List/Query/Acl.php" name="lib/Horde/Kolab/Storage/List/Query/Acl.php" />
+   <install as="Horde/Kolab/Storage/List/Query/ActiveSync.php" name="lib/Horde/Kolab/Storage/List/Query/ActiveSync.php" />
    <install as="Horde/Kolab/Storage/List/Query/List.php" name="lib/Horde/Kolab/Storage/List/Query/List.php" />
    <install as="Horde/Kolab/Storage/List/Query/Share.php" name="lib/Horde/Kolab/Storage/List/Query/Share.php" />
    <install as="Horde/Kolab/Storage/List/Query/Acl/Base.php" name="lib/Horde/Kolab/Storage/List/Query/Acl/Base.php" />
    <install as="Horde/Kolab/Storage/List/Query/Acl/Cache.php" name="lib/Horde/Kolab/Storage/List/Query/Acl/Cache.php" />
+   <install as="Horde/Kolab/Storage/List/Query/ActiveSync/Base.php" name="lib/Horde/Kolab/Storage/List/Query/ActiveSync/Base.php" />
+   <install as="Horde/Kolab/Storage/List/Query/ActiveSync/Cache.php" name="lib/Horde/Kolab/Storage/List/Query/ActiveSync/Cache.php" />
    <install as="Horde/Kolab/Storage/List/Query/List/Base.php" name="lib/Horde/Kolab/Storage/List/Query/List/Base.php" />
    <install as="Horde/Kolab/Storage/List/Query/List/Cache.php" name="lib/Horde/Kolab/Storage/List/Query/List/Cache.php" />
    <install as="Horde/Kolab/Storage/List/Query/Share/Base.php" name="lib/Horde/Kolab/Storage/List/Query/Share/Base.php" />
@@ -849,6 +862,8 @@
    <install as="Horde/Kolab/Storage/Unit/List/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/List/Decorator/LogTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/Acl/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Acl/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/Acl/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Acl/CacheTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/List/Query/ActiveSync/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/ActiveSync/BaseTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/List/Query/ActiveSync/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/ActiveSync/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/List/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/List/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/List/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/List/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/Share/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Share/BaseTest.php" />
@@ -1020,9 +1035,10 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-05-30</date>
+   <date>2011-05-31</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
+* [gwr] Added a handler for active sync settings.
 * [gwr] Added preference data query.
 * [gwr] Added support for storing data query results in the cache.
 * [gwr] Added support for deleting messages by backend UID.
