--- a/package.xml
+++ b/package.xml
@@ -11,8 +11,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-05-31</date>
- <time>04:35:51</time>
+ <date>2011-07-21</date>
+ <time>10:35:57</time>
  <version>
   <release>1.1.0</release>
   <api>1.1.0</api>
@@ -37,21 +37,16 @@
     <dir name="Horde">
      <dir name="Kolab">
       <dir name="Storage">
+       <dir name="examples">
+        <file name="list.php" role="doc" />
+       </dir> <!-- /doc/Horde/Kolab/Storage/examples -->
        <file name="API.txt" role="doc" />
+       <file name="TODO" role="doc" />
        <file name="usage.txt" role="doc" />
       </dir> <!-- /doc/Horde/Kolab/Storage -->
      </dir> <!-- /doc/Horde/Kolab -->
     </dir> <!-- /doc/Horde -->
    </dir> <!-- /doc -->
-   <dir name="examples">
-    <dir name="Horde">
-     <dir name="Kolab">
-      <dir name="Storage">
-       <file name="list.php" role="doc" />
-      </dir> <!-- /examples/Horde/Kolab/Storage -->
-     </dir> <!-- /examples/Horde/Kolab -->
-    </dir> <!-- /examples/Horde -->
-   </dir> <!-- /examples -->
    <dir name="lib">
     <dir name="Horde">
      <dir name="Kolab">
@@ -480,6 +475,9 @@
          <file name="ListTest.php" role="test" />
         </dir> <!-- /test/Horde/Kolab/Storage/Unit/Cache -->
         <dir name="Data">
+         <dir name="Decorator">
+          <file name="LogTest.php" role="test" />
+         </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Decorator -->
          <dir name="Format">
           <file name="MimeTest.php" role="test" />
          </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Format -->
@@ -562,7 +560,6 @@
      </dir> <!-- /test/Horde/Kolab -->
     </dir> <!-- /test/Horde -->
    </dir> <!-- /test -->
-   <file name="TODO" role="data" />
   </dir> <!-- / -->
  </contents>
  <dependencies>
@@ -647,9 +644,10 @@
  </dependencies>
  <phprelease>
   <filelist>
-   <install as="Horde/Kolab/Storage/API.txt" name="doc/Horde/Kolab/Storage/API.txt" />
-   <install as="Horde/Kolab/Storage/usage.txt" name="doc/Horde/Kolab/Storage/usage.txt" />
-   <install as="Horde/Kolab/Storage/list.php" name="examples/Horde/Kolab/Storage/list.php" />
+   <install as="API.txt" name="doc/Horde/Kolab/Storage/API.txt" />
+   <install as="TODO" name="doc/Horde/Kolab/Storage/TODO" />
+   <install as="usage.txt" name="doc/Horde/Kolab/Storage/usage.txt" />
+   <install as="examples/list.php" name="doc/Horde/Kolab/Storage/examples/list.php" />
    <install as="Horde/Kolab/Storage.php" name="lib/Horde/Kolab/Storage.php" />
    <install as="Horde/Kolab/Storage/Base.php" name="lib/Horde/Kolab/Storage/Base.php" />
    <install as="Horde/Kolab/Storage/Cache.php" name="lib/Horde/Kolab/Storage/Cache.php" />
@@ -842,6 +840,7 @@
    <install as="Horde/Kolab/Storage/Unit/Cache/ListTest.php" name="test/Horde/Kolab/Storage/Unit/Cache/ListTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/CachedTest.php" name="test/Horde/Kolab/Storage/Unit/Data/CachedTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" />
@@ -870,7 +869,6 @@
    <install as="Horde/Kolab/Storage/Unit/List/Query/Share/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Share/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Query/Share/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Share/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/QuerySet/UncachedTest.php" name="test/Horde/Kolab/Storage/Unit/QuerySet/UncachedTest.php" />
-   <install as="TODO" name="TODO" />
   </filelist>
  </phprelease>
  <changelog>
@@ -1036,7 +1034,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-05-31</date>
+   <date>2011-07-21</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 * [gwr] Added support for retrieving objects by backend id.
