--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
  <name>Horde_Kolab_Storage</name>
  <channel>pear.horde.org</channel>
  <extends>Kolab_Storage</extends>
- <summary>A package for handling Kolab data stored on an IMAP server.</summary>
+ <summary>A package for handling Kolab data stored on an IMAP server</summary>
  <description>Storing user data in an IMAP account belonging to the user is one of the Kolab server core concepts. This package provides all the necessary means to deal with this type of data storage effectively.</description>
  <lead>
   <name>Gunnar Wrobel</name>
