--- a/package.xml
+++ b/package.xml
@@ -11,8 +11,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-07-21</date>
- <time>10:35:57</time>
+ <date>2011-08-02</date>
+ <time>07:12:24</time>
  <version>
   <release>1.1.0</release>
   <api>1.1.0</api>
@@ -68,10 +68,14 @@
          <file name="Structure.php" role="php" />
         </dir> <!-- /lib/Horde/Kolab/Storage/Data/Parser -->
         <dir name="Query">
+         <dir name="History">
+          <file name="Base.php" role="php" />
+         </dir> <!-- /lib/Horde/Kolab/Storage/Data/Query/History -->
          <dir name="Preferences">
           <file name="Base.php" role="php" />
           <file name="Cache.php" role="php" />
          </dir> <!-- /lib/Horde/Kolab/Storage/Data/Query/Preferences -->
+         <file name="History.php" role="php" />
          <file name="Preferences.php" role="php" />
         </dir> <!-- /lib/Horde/Kolab/Storage/Data/Query -->
         <file name="Base.php" role="php" />
@@ -487,6 +491,9 @@
           <file name="StructureTest.php" role="test" />
          </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Parser -->
          <dir name="Query">
+          <dir name="History">
+           <file name="BaseTest.php" role="test" />
+          </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Query/History -->
           <dir name="Preferences">
            <file name="BaseTest.php" role="test" />
            <file name="CacheTest.php" role="test" />
@@ -678,7 +685,9 @@
    <install as="Horde/Kolab/Storage/Data/Decorator/Log.php" name="lib/Horde/Kolab/Storage/Data/Decorator/Log.php" />
    <install as="Horde/Kolab/Storage/Data/Format/Mime.php" name="lib/Horde/Kolab/Storage/Data/Format/Mime.php" />
    <install as="Horde/Kolab/Storage/Data/Parser/Structure.php" name="lib/Horde/Kolab/Storage/Data/Parser/Structure.php" />
+   <install as="Horde/Kolab/Storage/Data/Query/History.php" name="lib/Horde/Kolab/Storage/Data/Query/History.php" />
    <install as="Horde/Kolab/Storage/Data/Query/Preferences.php" name="lib/Horde/Kolab/Storage/Data/Query/Preferences.php" />
+   <install as="Horde/Kolab/Storage/Data/Query/History/Base.php" name="lib/Horde/Kolab/Storage/Data/Query/History/Base.php" />
    <install as="Horde/Kolab/Storage/Data/Query/Preferences/Base.php" name="lib/Horde/Kolab/Storage/Data/Query/Preferences/Base.php" />
    <install as="Horde/Kolab/Storage/Data/Query/Preferences/Cache.php" name="lib/Horde/Kolab/Storage/Data/Query/Preferences/Cache.php" />
    <install as="Horde/Kolab/Storage/Decorator/Log.php" name="lib/Horde/Kolab/Storage/Decorator/Log.php" />
@@ -845,6 +854,7 @@
    <install as="Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/Data/Query/History/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/History/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/Preferences/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/Preferences/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/Decorator/LogTest.php" />
@@ -1036,7 +1046,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-07-21</date>
+   <date>2011-08-02</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 * [gwr] Fixed support for multiple namespaces of the same type.
