--- a/package.xml
+++ b/package.xml
@@ -638,6 +638,13 @@
     <exclude>2.0.0</exclude>
    </package>
    <package>
+    <name>Horde_History</name>
+    <channel>pear.horde.org</channel>
+    <min>1.0.0</min>
+    <max>2.0.0</max>
+    <exclude>2.0.0</exclude>
+   </package>
+   <package>
     <name>HTTP_Request</name>
     <channel>pear.php.net</channel>
    </package>
