Development mode for Horde_Kolab_Storage-1.1.1

--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <active>yes</active>
  </lead>
  <date>2011-11-13</date>
- <time>00:22:41</time>
+ <time>00:23:23</time>
  <version>
-  <release>1.1.0</release>
+  <release>1.1.1</release>
   <api>1.1.0</api>
  </version>
  <stability>
@@ -23,16 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [gwr] Readded support for updating Horde_History.
-* [gwr] Fixed support for multiple namespaces of the same type.
-* [jan] Update Latvian translation.
-* [gwr] Added support for retrieving objects by backend id.
-* [gwr] Added a handler for active sync settings.
-* [gwr] Added preference data query.
-* [gwr] Added support for storing data query results in the cache.
-* [gwr] Added support for deleting messages by backend UID.
-* [jan] Updated Spanish translation.
-* [gwr] Added logging for data handlers.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1071,6 +1062,19 @@
 * [gwr] Added support for deleting messages by backend UID.
 * [jan] Updated Spanish translation.
 * [gwr] Added logging for data handlers.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.1.1</release>
+    <api>1.1.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2011-11-13</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
