--- a/package.xml
+++ b/package.xml
@@ -11,19 +11,19 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2011-11-13</date>
- <time>00:23:23</time>
+ <date>2012-07-05</date>
+ <time>22:17:34</time>
  <version>
-  <release>1.1.1</release>
+  <release>2.0.0alpha1</release>
   <api>1.1.0</api>
  </version>
  <stability>
-  <release>stable</release>
+  <release>alpha</release>
   <api>stable</api>
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* First alpha release for Horde 5.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1066,15 +1066,15 @@
   </release>
   <release>
    <version>
-    <release>1.1.1</release>
+    <release>2.0.0alpha1</release>
     <api>1.1.0</api></version>
    <stability>
-    <release>stable</release>
+    <release>alpha</release>
     <api>stable</api></stability>
-   <date>2011-11-13</date>
+   <date>2012-07-05</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* First alpha release for Horde 5.
    </notes>
   </release>
  </changelog>
