--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-*
+* [jan] Fix listing and loading data from IMAP server (Bug #11273).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1087,7 +1087,7 @@
    <date>2012-07-05</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-*
+* [jan] Fix listing and loading data from IMAP server (Bug #11273).
    </notes>
   </release>
  </changelog>
