--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
+* [jan] Fix moving objects to a different folder (Bug #11280).
 * [jan] Fix listing and loading data from IMAP server (Bug #11273).
  </notes>
  <contents>
@@ -1087,6 +1088,7 @@
    <date>2012-07-05</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
+* [jan] Fix moving objects to a different folder (Bug #11280).
 * [jan] Fix listing and loading data from IMAP server (Bug #11273).
    </notes>
   </release>
