--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
+* First beta release for Horde 5.
 * [jan] Fix renaming of shares (Bug #11281).
 * [jan] Fix moving objects to a different folder (Bug #11280).
 * [jan] Fix listing and loading data from IMAP server (Bug #11273).
@@ -1089,6 +1090,7 @@
    <date>2012-07-19</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
+* First beta release for Horde 5.
 * [jan] Fix renaming of shares (Bug #11281).
 * [jan] Fix moving objects to a different folder (Bug #11280).
 * [jan] Fix listing and loading data from IMAP server (Bug #11273).
