--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [gwr] Avoid overwriting unknown XML elements (Bug #11309)
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1103,7 +1103,7 @@
    <date>2012-07-19</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [gwr] Avoid overwriting unknown XML elements (Bug #11309)
    </notes>
   </release>
  </changelog>
