[gwr] Reactivate folder list caching.

--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [gwr] Reactivate folder list caching.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1190,7 +1190,7 @@
    <date>2012-08-30</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [gwr] Reactivate folder list caching.
    </notes>
   </release>
  </changelog>
