--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <active>yes</active>
  </lead>
  <date>2012-10-12</date>
- <time>20:45:38</time>
+ <time>20:45:57</time>
  <version>
-  <release>2.0.0beta3</release>
+  <release>2.0.0RC1</release>
   <api>1.1.0</api>
  </version>
  <stability>
@@ -23,8 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [gwr] Allow setting the default folder.
-* [gwr] Reactivate folder list caching.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1207,6 +1206,19 @@
    <notes>
 * [gwr] Allow setting the default folder.
 * [gwr] Reactivate folder list caching.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.0RC1</release>
+    <api>1.1.0</api></version>
+   <stability>
+    <release>beta</release>
+    <api>stable</api></stability>
+   <date>2012-10-12</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
