--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <active>yes</active>
  </lead>
  <date>2012-10-26</date>
- <time>23:21:30</time>
+ <time>23:21:48</time>
  <version>
-  <release>2.0.0RC1</release>
+  <release>2.0.0RC2</release>
   <api>1.1.0</api>
  </version>
  <stability>
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [gwr] Corrected fix for modifying Kolab objects.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1219,6 +1219,19 @@
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [gwr] Corrected fix for modifying Kolab objects.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.0RC2</release>
+    <api>1.1.0</api></version>
+   <stability>
+    <release>beta</release>
+    <api>stable</api></stability>
+   <date>2012-10-26</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
